Closed Bug 337144 Opened 19 years ago Closed 19 years ago

History has no initial focus (bookmarks does)

Categories

(Camino Graveyard :: Accessibility, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino2.0

People

(Reporter: alqahira, Assigned: hwaara)

References

()

Details

(Keywords: access, fixed1.8.1)

Attachments

(2 files, 2 obsolete files)

STR: 1. Go to cb.o 2. Then Cmd-Y 3. Try to tab to the History search field Result: nothing Expected result: tab gets you to the search field Compare to bookmarks (substitute Cmd-B for Cmd-Y above), where there is initial focus on the right-hand pane, and you can tab. (If you're on a page that shows a sheet before you leave, focus goes back to the location bar, and then you can tab in History.) There are a myriad of other focus/access bugs lurking in the Manager (switching collections with Cmd-Y, bug 322699, bug 240760, etc.), but this and/or bug 322699 would really help. This particular lack of focus might be related to the fact History is not a toggle and perhaps it expects focus to have been added by the Manager already? 2.0 for Manager "rewrite" per the roadmap, but something really should be done sooner if possible....
Attached patch Fix (obsolete) — Splinter Review
This fixes this bug and all other focus bugs referenced. It simply makes the initial focus + tabbing cycle working in history/bookmarks view. A few of the issues: 1) we'd hardcoded the focus to bookmarks, and didn't care about history. 2) we hardcoded some focusing that was inconsistent with the nextKeyViews in the nib
Assignee: nobody → hwaara
Status: NEW → ASSIGNED
Attachment #221514 - Flags: superreview?(mikepinkerton)
Blocks: 240760, 322699
Are there nib changes that accompany this patch? I ask because although the initial focus is now in the search field in history and bookmarks, nothing else seems fixed: 1. Cmd-F does not focus the search field if you've moved focus elsewhere 2. With FKA off, I'd still expect to be able to tab between the location bar and the search field (and possibly the 2 panes as well) 3. With FKA on, tab goes nowhere; you can shift-tab backward to 3 of the 4 buttons on the bottom, and then forward again to the search field (the new collection button on the far left is the missing one button)--but never the left or right panes or the location bar. It's possible that some of this might be related to bug 152987, bug 198153, or bug 336949, but I have no way of knowing.
code looks ok. how much was this supposed to fix?
(In reply to comment #2) > 2. With FKA off, I'd still expect to be able to tab between the location bar > and the search field (and possibly the 2 panes as well) Since people can switch collections and select bookmarks with the keyboard now (because the two panes are also tabable, along with the search field), not being able to tab between panes and select bookmarks with FKA off will be seen by some as a regression.
This fixes tabbing between all panes (and buttons when FKA is on) in the history/bookmarks views. It also fixes the initial focus. Yes, there are nib changes.
Attached file New BookmarksEditing nib (obsolete) —
Here's the nib. Smokey also wanted me to fix bug 327839 while I was touching this nib, so I did.
Blocks: 327839
No longer blocks: 240760
Comment on attachment 221514 [details] [diff] [review] Fix Smokey found a special-case where shift-tabbing didn't work. Fixing tonight.
Attachment #221514 - Attachment is obsolete: true
Attachment #221514 - Flags: superreview?(mikepinkerton)
Håkan and I talked about this on irc, and he didn't mean to include bug 240760 in the blocks list; he didn't try to fix it here, and it's gonna be more involved (re-enabling that menu and so forth, and the Find panel issue), so let's not tackle it here. That takes care of comment 2 point 1. The nib fixes most of 2 and most of 3; the rest of 2 and 3 are covered by the other bugs in comment 2, having done some build/branch comparisons ;) I have one tiny little issue left: if you're in the search field in bookmarks, *shift*-tabbing (with FKA on or off) takes you back to the left pane (skipping the right pane); tabbing works correctly, and history works correctly in both directions. With that tiny thing fixed, r=me FWIW.
Attached patch Fix v2Splinter Review
This fix also fixes the weird shift-tab case. For some reason that I've been investigating the whole weekend, shift-tab won't work on the history outliner if you set up the keyview connection in the nib. I finally worked around it by simply doing the connection from the code.
Attachment #221958 - Flags: superreview?(mikepinkerton)
Attachment #221958 - Flags: review?(mozilla)
Nib that sets up the right connections, and changes "Groups" to "Collections" as per the bug referenced a few comments above.
Attachment #221686 - Attachment is obsolete: true
Comment on attachment 221958 [details] [diff] [review] Fix v2 r=me, FWIW; everything works as expected with this patch and the associated nib (within the limits of the toolbar tabbing bugs I mentioned in comment 2).
Comment on attachment 221958 [details] [diff] [review] Fix v2 Patch looks good to me, codewise.
Attachment #221958 - Flags: review?(mozilla) → review+
Attachment #221958 - Flags: superreview?(mikepinkerton) → superreview+
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Keywords: fixed1.8.1
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: