Make the tabbing cycle in bookmarks/history view sane. The search textfield gets initial focus, for quick searching. Renamed the column of the left pane from 'Groups' to 'Collections'. Fixes bug 337144, 327839, 322699.  r=Wevah, sr=mento.